--- a/pokesystem/app/assets/stylesheets/application.css
+++ b/pokesystem/app/assets/stylesheets/application.css
@@ -13,3 +13,101 @@
  *= require_tree .
  *= require_self
  */
+ @import url("http://meyerweb.com/eric/tools/css/reset/reset.css");
+ @import url("https://fonts.googleapis.com/css?family=Indie+Flower%7COpen+Sans");
+
+ body {
+   color: #333;
+   background-color: #eee;
+   font-family: "Open Sans";
+ }
+
+ input, label {
+   display: block;
+   width: 100%;
+ }
+
+ label {
+   font-style: italic;
+   margin-bottom: 0.25rem;
+ }
+
+ input {
+   margin-bottom: 1rem;
+   font-size: 2rem;
+   border: none;
+ }
+
+ a {
+   text-decoration: none;
+   color: #333;
+ }
+
+ header {
+   background-color: #4db36f;
+   padding: 1rem;
+   box-shadow: 0 1px 1px #999;
+ }
+ header h1 {
+   font-size: 2rem;
+   color: #fff;
+   font-family: "Indie Flower";
+ }
+
+ main {
+   padding: 3rem;
+   position: relative;
+   min-height: calc(100vh - 208px);
+ }
+ main h2 {
+   font-size: 2rem;
+   font-weight: 700;
+   margin-top: 0.5rem;
+   margin-bottom: 1rem;
+ }
+
+ footer {
+   padding: 1rem;
+   background-color: #333;
+   color: #eee;
+ }
+
+ .pokemons {
+   display: flex;
+   flex-flow: row wrap;
+ }
+
+ .pokemon-listing {
+   max-width: 30rem;
+   margin: 1rem;
+   box-shadow: 2px 2px 2px #999;
+   transition: all 0.2s;
+ }
+ .pokemon-listing:hover {
+   transform: scale(1.03);
+ }
+ .pokemon-listing h3 {
+   font-weight: 700;
+   font-size: 1.2rem;
+   margin-bottom: 0.5rem;
+   background-color: #6f4db3;
+   padding: 1rem;
+   color: #eee;
+ }
+ .pokemon-listing figure {
+   margin-right: 1rem;
+   padding: 1rem;
+ }
+ .pokemon-listing figure img {
+   max-width: 160px;
+ }
+ .pokemon-listing figure figcaption {
+   font-style: italic;
+ }
+ .pokemon-listing section {
+   display: flex;
+ }
+ .pokemon-listing p {
+   padding: 1rem;
+   line-height: 1.5;
+ }
