--- a/pokesystem/app/views/layouts/application.html.erb
+++ b/pokesystem/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pokesystem</title>
+    <title>Pokedex System</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
