--- a/pokesystem/app/javascript/components/App.css
+++ b/pokesystem/app/javascript/components/App.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700,300,400italic");
 @import url("https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700");
+@import url("https://fonts.googleapis.com/css?family=Indie+Flower%7COpen+Sans");
 
 body,
 html,
@@ -42,14 +43,15 @@ body {
   line-height: 28px;
 }
 
-header {
-  background: #f57011;
-  height: 60px;
-}
+ header {
+   background-color: #4db36f;
+   padding: 1rem;
+   box-shadow: 0 1px 1px #999;
+ }
 
 header h1 a{
   display: inline-block;
-  font-family: "Maven Pro";
+  font-family: "Indie Flower";
   font-size: 28px;
   font-weight: 500;
   color: white;
@@ -73,11 +75,11 @@ header h1 a:hover {
 .pokemonList {
   background: #f6f6f6;
   padding: 16px;
+  overflow-y: scroll;
 }
 
 .pokemonList h2 {
   font-size: 20px;
-  padding: 8px 6px 10px;
 }
 
 .pokemonContainer {
@@ -218,4 +220,10 @@ input.search {
   width: 92%;
   margin: 15px 2px;
   padding: 4px 0 6px 6px;
+}
+
+footer {
+  padding: 1rem;
+  background-color: #333;
+  color: #eee;
 }
